# CMakeGitMetadata

./: README.md
CMakeModules/: GitMetadata.cmake
gitmetadata/: gitmetadata.h.in
src/: CMakeLists.txt  main.cpp
